--- a/package.json
+++ b/package.json
@@ -10,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "@linclark/pkg": "^1.0.2"
-  }
+  },
+  "repository": "https://github.com/amazinggracec/dir.git"
 }
